--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,13 +15,14 @@
   {{> header isAdminPage=isAdminPage }} 
 
   {{!-- Flash Messages --}}
-  {{#if success_msg}}
+  {{!-- Removed success_msg block --}}
+  {{!-- {{#if success_msg}}
     <div class="bg-green-900 text-green-100 px-4 py-3 shadow-md mb-4" role="alert" aria-live="polite">
       <div class="container mx-auto">
         <p>{{success_msg}}</p>
       </div>
     </div>
-  {{/if}}
+  {{/if}} --}}
   
   {{#if error_msg}}
     <div class="bg-red-900 text-red-100 px-4 py-3 shadow-md mb-4" role="alert" aria-live="assertive">
