--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -44,7 +44,7 @@
     <div class="container mx-auto px-4">
       <div class="flex flex-col md:flex-row md:justify-between">
         <div class="mb-6 md:mb-0">
-          <h2 class="text-xl font-bold text-white mb-2">My<span class="text-cyan-500">Blog</span></h2> {{!-- Updated Blog Name --}}
+          <h2 class="text-xl font-bold text-white mb-2">Tech<span class="text-cyan-500">Blog</span></h2> {{!-- Updated Blog Name --}}
           <p class="text-white">A blog about cool things.</p> {{!-- Updated tagline --}}
         </div>
         
@@ -56,7 +56,7 @@
       </div>
       
       <div class="mt-8 pt-6 border-t border-gray-700 text-center text-white text-sm">
-        <p>&copy; {{currentYear}} MyBlog. All rights reserved.</p> {{!-- Use helper --}}
+        <p>&copy; {{currentYear}} TechBlog. All rights reserved.</p> {{!-- Use helper --}}
       </div>
     </div>
   </footer>
