--- a/views/admin-dashboard.hbs
+++ b/views/admin-dashboard.hbs
@@ -46,7 +46,7 @@
         </div>
         
         <div class="grid grid-cols-1 gap-4">
-          <a href="/admin/posts/new" 
+          <a href="/admin/posts/create" 
              class="flex items-center p-4 bg-cyan-700 hover:bg-cyan-600 rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-900 focus:ring-cyan-500 min-h-[44px]"
              aria-label="Write new post">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
