--- a/views/post-form.hbs
+++ b/views/post-form.hbs
@@ -2,7 +2,7 @@
 
 <div class="min-h-screen bg-gray-900 text-gray-100 pb-12">
   <div class="container mx-auto px-4 py-8 max-w-6xl">
-    <!-- Header section -->
+    <!-- Subheader section -->
     <h1 class="text-3xl font-bold text-white mb-8">
       {{#if post}}Edit Post{{else}}Create New Post{{/if}}
     </h1>
