fix homepage bug

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -49,9 +49,9 @@
           <div class="flex items-center justify-between mb-2">
             <label for="password" class="block text-gray-300 text-sm font-medium">Password</label>
             {{!-- Removed forgot password link as it's not implemented in this version --}}
-            {{!-- <a href="/forgot-password" class="text-sm text-cyan-400 hover:text-cyan-300 transition-colors">
+            <a href="/forgot-password" class="text-sm text-cyan-400 hover:text-cyan-300 transition-colors">
               Forgot password?
-            </a> --}}
+            </a>
           </div>
           <input 
             type="password" 
