--- a/views/post-details.hbs
+++ b/views/post-details.hbs
@@ -21,7 +21,7 @@
 
     <!-- Article content -->
     <article class="prose prose-lg prose-invert max-w-none mb-16">
-      <div class="markdown-content">{{{post.content}}}</div>
+      <div class="text-content">{{post.content}}</div>
     </article>
   </div>
 </div>
